tests/interpreter/pass/010-mutable-vars.hyg
let x: int = 0;
{
    let mutable x: int = 3;
    x <- x + 1;
    assert(x = 4)
}
assert(x = 0)
