tests/interpreter/fail/029-array-element-write-out-of-bounds.hyg
let arr: array {int} = array(2, 1);
let arr2: array {int} = array(2, 2);
arrayElem(arr, 2) <- arrayElem(arr, 1) + 42;
print("out of bound")